[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "AppDApiTools"
requires-python=">=3.9"
keywords=["appdynamics", "appd", "api", "functions", "tools"]
version = "0.0.1"
authors = [
  { name="Jeremy Davis", email="jeremyda@cisco.com" },
]
classifiers=[
    "Intended Audience :: AppDynamics Admins",
    "Programming Language :: Python :: 3.9",
]
description = "A small set of functions for AppDynamics"
readme = "README.md"
license = { file="LICENSE" }

dependencies = [
    "requests",
    'importlib-metadata; python_version>="3.9"',
    "importlib",
    "argparse",
    "configparser",
    "requests",
]
[project.urls]
"Homepage" = "https://github.com/jeremydavis02/AppDApiTools"
"Bug Tracker" = "https://github.com/jeremydavis02/AppDApiTools/issues"

[project.scripts]
appd_api_tools = "AppDApiTools.appd_tools:do_work"